--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "esbuild": "^0.20.2",
     "qrcode-terminal": "^0.12.0",
     "typescript": "^5.8.2",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "vite-plugin-static-copy": "^3.1.1"
   },
   "dependencies": {
     "phaser": "^3.88.2"
